:hammer: Fix `.stretch-link` not working on button

--- a/src/objects/_stretched-link.scss
+++ b/src/objects/_stretched-link.scss
@@ -7,6 +7,8 @@
   // Doc : add Doc
   //
   .stretch-link {
+    position: static;
+
     @include after {
       content: "";
       position: absolute;
